--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
+      - name: Install Fonts
+        run: sudo apt-get install -y fonts-nanum*
       - run: npm install
       - run: npm run build
       - name: Deploy
