--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install Fonts
         run: |
           sudo apt update
-          sudo apt install -y fonts-roboto
+          sudo apt install -y fonts-roboto & fonts-open-sans
       - run: npm install
       - run: npm run build
       - name: Deploy
