--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install Fonts
         run: |
           sudo apt update
-          sudo apt upt list --upgradable
+          sudo apt list --upgradable
           sudo apt install -y locales
           sudo apt install -y language-pack-ko
           sudo locale-gen ko_KR.utf8
