--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,12 +18,15 @@ jobs:
         run: |
           sudo apt update
           sudo apt list --upgradable
+          sudo apt upgrade
           sudo apt install -y locales
           sudo apt install -y language-pack-ko
           sudo locale-gen ko_KR.utf8
           sudo echo -e "export LANGUAGE=ko_KR.UTF-8\n
           export LANG=ko_KR.UTF-8" >> ~/.bashrc
           source ~/.bashrc
+          sudo apt update
+          sudo apt upgrade
           sudo apt install -y fonts-roboto
           sudo apt install -y fonts-open-sans
       - run: npm install
