--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,9 +19,12 @@ jobs:
           sudo apt update
           sudo apt list --upgradable
           sudo apt upgrade
+          wget https://github.com/naver/d2codingfont/releases/download/VER1.3.2/D2Coding-Ver1.3.2-20180524.zip
+          unzip D2Coding-Ver1.3.2-20180524.zip
+          sudo cp D2Coding-Ver1.3.2-20180524/D2Coding.ttf /usr/share/fonts/truetype/
+          sudo fc-cache -f -v
           sudo apt install -y fonts-roboto
           sudo apt install -y fonts-open-sans
-          sudo apt install -y fonts-d2coding
       - run: npm install
       - run: npm run build
       - name: Deploy
