feat(workflows): gh-pages.yml ubuntu 디렉토리 경로 변경

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -21,7 +21,7 @@ jobs:
           sudo apt upgrade
           wget https://github.com/naver/d2codingfont/releases/download/VER1.3.2/D2Coding-Ver1.3.2-20180524.zip
           unzip D2Coding-Ver1.3.2-20180524.zip
-          sudo cp D2Coding-Ver1.3.2-20180524/D2Coding.ttf /usr/share/fonts/truetype/
+          sudo cp D2Coding/D2Coding-Ver1.3.2-20180524.ttf /usr/share/fonts/truetype/
           sudo fc-cache -f -v
           sudo apt install -y fonts-roboto
           sudo apt install -y fonts-open-sans
