--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "puppeteer": "^16.1.0",
     "speakingurl": "^14.0.1",
     "watch": "^1.0.2"
+  },
+  "dependencies": {
+    "pdfkit": "^0.15.0"
   }
 }
